--- a/vue_hello/package.json
+++ b/vue_hello/package.json
@@ -19,12 +19,14 @@
     "bootstrap": "^3.4.1",
     "browser-sync": "^2.26.13",
     "browser-sync-webpack-plugin": "^2.0.1",
+    "chart.js": "^2.9.4",
     "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.9",
     "node-sass": "^4.14.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-social-sharing": "^2.4.6",
     "vue-template-compiler": "^2.6.12"
   },
