--- a/laravel_vue_quiz/package.json
+++ b/laravel_vue_quiz/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "axios": "^0.21.0",
     "bootstrap": "^3.4.1",
     "browser-sync": "^2.26.13",
     "browser-sync-webpack-plugin": "^2.0.1",
@@ -27,6 +28,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
+    "vue-router": "^3.4.9",
     "vue-social-sharing": "^2.4.6",
     "vue-template-compiler": "^2.6.12"
   },
