--- a/laravel_vue_quiz/package.json
+++ b/laravel_vue_quiz/package.json
@@ -22,10 +22,13 @@
     "browser-sync-webpack-plugin": "^2.0.1",
     "chart.js": "^2.9.4",
     "cross-env": "^7.0.2",
+    "jquery": "^3.5.1",
+    "l": "^0.6.0",
     "laravel-mix": "^5.0.9",
     "node-sass": "^4.14.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.2",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.9",
