--- a/laravel_vue_quiz/composer.json
+++ b/laravel_vue_quiz/composer.json
@@ -12,6 +12,7 @@
         "doctrine/dbal": "2.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
